style: round switch label gap issue

--- a/assets/frontend/ttbm_registration.css
+++ b/assets/frontend/ttbm_registration.css
@@ -74,6 +74,12 @@ div.ttbm_map_area #gmap_canvas {max-width: 100%;width: 100%;min-height: 320px;}
 /*********************Location list*****************************/
 div.ttbm_location_list div.filter_item {padding: 0;}
 /**************************************************/
+.col-left .roundSwitchLabel{
+	margin-right: 5px;
+}
+.col-right .roundSwitchLabel{
+	margin-right: 5px;
+}
 div.ttbm_style .mp_tour_ticket_form { border-radius: 8px; margin-top: 0px; padding: 0px;}
 #ttbm_content .content-title{
 	font-weight: 500;
